--- a/insure-landing-page-master/index.html
+++ b/insure-landing-page-master/index.html
@@ -33,8 +33,8 @@
       <img class="designhead" src="images/bg-pattern-intro-right-desktop.svg">
 
       <p>
-        Get your life insurance coverage easier and faster. We blend our expertise </br>
-        and technology to help you find the plan that’s right for you. Ensure you <br>
+        Get your life insurance coverage easier and faster. We blend our expertise
+        and technology to help you find the plan that’s right for you. Ensure you
         and your loved ones are protected.
       </p>
       <button id="viewplans" type="button">View plans</button>
@@ -77,16 +77,9 @@
       
   
       <div id="how-we-work">
-        <div class="first-how-we-work">
-          
-          <p class="how-we-work-para">Find out more <br> about how we work</p>
-          <button type="button"> How we work</button>
-        </div>
-  
-        <div class="second-how-we-work">
+          <p class="how-we-work-para">Find out more about how we work <button type="button"> How we work</button></p>
           <img class="second-how-we-work-img" src="images/bg-pattern-how-we-work-desktop.svg">
-        </div>    
-      </div>
+        </div>
     </main>
 
     <!-- footer -->
